gitignore and requirements update, example update file

--- a/notebooks/upload.ipynb
+++ b/notebooks/upload.ipynb
@@ -2,35 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting psycopg2\n",
-      "  Downloading psycopg2-2.9.9.tar.gz (384 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m384.9/384.9 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: psycopg2\n",
-      "  Building wheel for psycopg2 (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for psycopg2: filename=psycopg2-2.9.9-cp311-cp311-macosx_14_0_arm64.whl size=144251 sha256=d310b9ad77a977af9dc6c6915a33ad4622cbd0195b0f0a19874d36b29531bb37\n",
-      "  Stored in directory: /Users/rouvenpampus/Library/Caches/pip/wheels/ab/34/b9/78ebef1b3220b4840ee482461e738566c3c9165d2b5c914f51\n",
-      "Successfully built psycopg2\n",
-      "Installing collected packages: psycopg2\n",
-      "Successfully installed psycopg2-2.9.9\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install psycopg2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -50,7 +21,7 @@
     "from credentials import host, username, password\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine(f'postgresql://{username}:{password}@{host}:5432/energy_insights')\n",
+    "engine = create_engine(f'postgresql://{username}:{password}@{host}:5432/energy_insights_db/bronze')\n",
     "\n",
     "#df = pd.read_csv('../data/titanic.csv')\n",
     "\n",
