adjusted baseline_model.ipynb

--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -37,8 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load modules\n",
+    "####################################### Setup #######################################\n",
+    "\n",
+    "import psycopg2\n",
+    "from sqlalchemy import create_engine\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "import pytz\n",
     "from sklearn.metrics import mean_squared_error"
    ]
   },
@@ -49,7 +56,51 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "df = pd.read_csv('FILENAME_HERE.csv', parse_dates=['timestamp_column_name'])"
+    "# Load login data from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "DB_NAME = os.getenv('DB_NAME')\n",
+    "DB_USERNAME = os.getenv('DB_USERNAME')\n",
+    "DB_PASSWORD = os.getenv('DB_PASSWORD')\n",
+    "DB_HOST = os.getenv('DB_HOST')\n",
+    "DB_PORT = os.getenv('DB_PORT')\n",
+    "\n",
+    "DB_STRING = f'postgresql://{DB_USERNAME}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}'\n",
+    "\n",
+    "# Create SQLAlchemy engine\n",
+    "engine = create_engine(DB_STRING)\n",
+    "\n",
+    "# Create a new connection using psycopg2 for non-pandas operations\n",
+    "conn = psycopg2.connect(\n",
+    "    database=DB_NAME,\n",
+    "    user=DB_USERNAME,\n",
+    "    password=DB_PASSWORD,\n",
+    "    host=DB_HOST,\n",
+    "    port=DB_PORT\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"SELECT version();\")\n",
+    "    record = cursor.fetchone()\n",
+    "    print(\"You are connected to -\", record, \"\\n\")\n",
+    "    \n",
+    "    ####################################### EXTRACT #######################################\n",
+    "    \n",
+    "    # Load data from the database using SQLAlchemy engine\n",
+    "    print(\"Energy generation data loading!\")\n",
+    "    query_string2 = 'SELECT * FROM \"03_gold\".\"FILENAME_HERE\"'\n",
+    "    df_baseline = pd.read_sql(query_string2, engine)\n",
+    "    print(\"Loading finished!\")\n",
+    "\n",
+    "except Exception as error:\n",
+    "print(\"Error while connecting to PostgreSQL:\", error)\n",
+    "    \n",
+    "finally:\n",
+    "    if conn:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "        print(\"PostgreSQL connection is closed\")"
    ]
   },
   {
@@ -59,7 +110,7 @@
    "outputs": [],
    "source": [
     "# Create lag feature for the same hour on the previous day\n",
-    "df['price_lag24'] = df['price'].shift(24)"
+    "df_baseline['price_lag24'] = df_baseline['price'].shift(24)"
    ]
   },
   {
@@ -68,8 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop missing values\n",
-    "df.dropna(inplace=True)"
+    "# Drop missing values introduced due to the lag\n",
+    "df_baseline.dropna(inplace=True)"
    ]
   },
   {
@@ -78,54 +129,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train-test split -> watch out for sorted dataframe by date\n",
-    "train_size = int(len(df) * 0.8) # Need the same split for our later models!\n",
-    "train, test = df[:train_size], df[train_size:]"
+    "# Define the target and the feature (lagged values)\n",
+    "X = df_baseline.drop(columns=['price'])\n",
+    "y = df_baseline['price']"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "---\n",
-    "To be sure using the same split for the baseline model and our Machine Learning Models, we can extract the index from the train and test datasets.\n",
-    "```python\n",
-    "# Store indexes to ensure the same split\n",
-    "train_index = train.index\n",
-    "test_index = test.index\n",
-    "```\n",
+    "# Number of splits\n",
+    "n_splits = 5\n",
+    "test_size = int(len(X) / (n_splits + 1))\n",
     "\n",
-    "When we have done that, we can then use following code to split the data:\n",
-    "```python\n",
-    "# Use the same split indexes for train-test split\n",
-    "X_train, X_test = X.loc[train_index], X.loc[test_index]\n",
-    "y_train, y_test = y.loc[train_index], y.loc[test_index]\n",
-    "```\n",
+    "splits = []\n",
+    "mse_scores = []\n",
     "\n",
-    "However, I am not sure yet if this is the best way, also with regards of cross-validation etc. Need to rethink that.\n",
+    "for i in range(n_splits):\n",
+    "    train_end = (i + 1) * test_size\n",
+    "    test_end = train_end + test_size\n",
+    "    \n",
+    "    # Ensure that train_end does not go beyond the length of the dataset\n",
+    "    if test_end > len(X):\n",
+    "        test_end = len(X)\n",
     "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Baseline Model: Predict the price based on the previous day's same hour price\n",
-    "test['prediction'] = test['price_lag24']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate Error\n",
-    "mse = mean_squared_error(test['price'], test['prediction'])\n",
-    "print(f'Baseline Model MSE: {mse}')"
+    "    X_train = X.iloc[:train_end]\n",
+    "    X_test = X.iloc[train_end:test_end]\n",
+    "    y_train = y.iloc[:train_end]\n",
+    "    y_test = y.iloc[train_end:test_end]\n",
+    "    \n",
+    "    splits.append((X_train, X_test, y_train, y_test))\n",
+    "    \n",
+    "    # Predict using baseline (prior day's values)\n",
+    "    y_pred = X_test['lagged_target']\n",
+    "    \n",
+    "    # Calculate MSE\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    mse_scores.append(mse)\n",
+    "\n",
+    "    # Plotting\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    plt.plot(y_test.index, y_test, label='Actual', color='blue')\n",
+    "    plt.plot(y_test.index, y_pred, label='Predicted', color='red', linestyle='--')\n",
+    "    plt.title(f'Actual vs Predicted for Split {i+1}')\n",
+    "    plt.xlabel('Time')\n",
+    "    plt.ylabel('Target')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(f\"Split {i+1}: Training data: {X_train.shape}, Validation data: {X_test.shape}\")\n",
+    "    print(f\"Training target: {y_train.shape}, Validation target: {y_test.shape}\")\n",
+    "    print(f\"MSE for Split {i+1}: {mse}\\n\")\n",
+    "\n",
+    "# Optional: Average MSE across all splits for overall evaluation\n",
+    "average_mse = sum(mse_scores) / len(mse_scores)\n",
+    "print(f\"Average MSE across all splits: {average_mse}\")"
    ]
   }
  ],
