--- a/notebooks/EDA_capstone.ipynb
+++ b/notebooks/EDA_capstone.ipynb
@@ -29,6 +29,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "# Getting data\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
     "# Data Viz. \n",
     "import statsmodels.formula.api as smf\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
@@ -39,6 +44,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "import seaborn as sns\n",
+    "\n",
     "sns.set_style(\n",
     "    style='darkgrid', \n",
     "    rc={'axes.facecolor': 'white', 'grid.color': '.8'}\n",
@@ -53,7 +59,8 @@
     "register_matplotlib_converters()\n",
     "\n",
     "plt.rcParams['figure.figsize'] = [12, 6]\n",
-    "plt.rcParams['figure.dpi'] = 300"
+    "plt.rcParams['figure.dpi'] = 300\n",
+    "\n"
    ]
   },
   {
@@ -76,6 +83,31 @@
    "outputs": [],
    "source": [
     "# load data\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get database connection parameters from environment variables\n",
+    "db_name = os.getenv('DB_NAME')\n",
+    "db_user = os.getenv('DB_USER')\n",
+    "db_password = os.getenv('DB_PASSWORD')\n",
+    "db_host = os.getenv('DB_HOST')\n",
+    "db_port = os.getenv('DB_PORT')\n",
+    "\n",
+    "# Create the database URL\n",
+    "db_url = f\"postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\"\n",
+    "\n",
+    "# Create an engine\n",
+    "engine = create_engine(db_url)\n",
+    "\n",
+    "# Define your query\n",
+    "query = 'SELECT * FROM \"03_gold\".\"name_of_the_table\"'\n",
+    "\n",
+    "# Execute the query and load the data into a pandas DataFrame\n",
+    "df_check = pd.read_sql(query, engine)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(df_check.head())\n",
     "# df = pd.read_csv('')"
    ]
   },
@@ -123,6 +155,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check missing values\n",
+    "# df.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,7 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check more features\n"
+    "# Recognize linear and non-linear correlations and outliers\n",
+    "sns.pairplot(df)\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -176,7 +220,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check more features\n"
+    "# Check correlation\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.heatmap(df.corr(), annot=True, cmap='coolwarm')\n",
+    "plt.title('Correlation Matrix Heatmap')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot wind and solar \n",
+    "\n",
+    "# Bar chart for total production\n",
+    "plt.bar(['Solar', 'Wind', 'Total'], [total_solar, total_wind, total_production])\n",
+    "plt.ylabel('Production Quantity')\n",
+    "plt.title('Comparison of Energy Production')\n",
+    "plt.show()\n",
+    "\n",
+    "# Time series plot\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(df['Date'], df['SolarProduction'], label='Solar')\n",
+    "plt.plot(df['Date'], df['WindProduction'], label='Wind')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Production Quantity')\n",
+    "plt.title('Time Trend of Energy Production')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -229,6 +302,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the Average daily price trend over time\n",
+    "# Set the 'start_date' as an index if it is not yet set\n",
+    "df.set_index('start_date', inplace=True)\n",
+    "\n",
+    "# Resampling of the data to daily average values\n",
+    "daily_data = df['land[€/MWh]'].resample('D').mean()\n",
+    "\n",
+    "# Visualize the resampled data\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(daily_data.index, daily_data, marker='o', linestyle='-')\n",
+    "plt.title('Average daily price trend over time')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Average price  [€/MWh]')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,6 +364,66 @@
     "\n",
     "    \n",
     "fig.savefig(\"../eda_plots/Temp_MA_Smoothing.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### hours of sunshine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization of the hours of sunshine\n",
+    "plt.subplot(311)\n",
+    "plt.plot(df['SunshineHours'], label='Sunshine Hours')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Hours')\n",
+    "plt.legend(loc='best')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sunshine Hours and Solar Production Over Time\n",
+    "\n",
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "# Assuming df is your DataFrame and it contains columns 'Date', 'SunshineHours', and 'SolarProduction'\n",
+    "df['Date'] = pd.to_datetime(df['Date'])  \n",
+    "\n",
+    "fig, ax1 = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "# Create the first Y-axis for the hours of sunshine\n",
+    "color = 'tab:blue'\n",
+    "ax1.set_xlabel('Date')\n",
+    "ax1.set_ylabel('Sunshine Hours', color=color)\n",
+    "ax1.plot(df['Date'], df['SunshineHours'], color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "# Create the second Y-axis for solar production\n",
+    "ax2 = ax1.twinx()  # Create a second Y-axis that divides the first axis\n",
+    "color = 'tab:red'\n",
+    "ax2.set_ylabel('Solar Production', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(df['Date'], df['SolarProduction'], color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "# Formatting the X-axis for dates\n",
+    "ax1.xaxis.set_major_locator(mdates.AutoDateLocator())\n",
+    "ax1.xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))\n",
+    "fig.autofmt_xdate()  # Improves the display of date labels (skewed)\n",
+    "\n",
+    "plt.title('Sunshine Hours and Solar Production Over Time')\n",
+    "plt.show()"
    ]
   },
   {
