small changes and tests for api of recent weather data

--- a/notebooks/api-open_meteo.ipynb
+++ b/notebooks/api-open_meteo.ipynb
@@ -2,52 +2,228 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coordinates 52.52000045776367°N 13.419998168945312°E\n",
-      "Elevation 38.0 m asl\n",
-      "Timezone b'Europe/London' b'BST'\n",
-      "Timezone difference to GMT+0 3600 s\n",
-      "                         date  temperature_2m  relative_humidity_2m   \n",
-      "0   2024-05-25 23:00:00+00:00       16.595499                  82.0  \\\n",
-      "1   2024-05-26 00:00:00+00:00       15.595500                  91.0   \n",
-      "2   2024-05-26 01:00:00+00:00       14.795500                  97.0   \n",
-      "3   2024-05-26 02:00:00+00:00       14.095500                  95.0   \n",
-      "4   2024-05-26 03:00:00+00:00       13.695499                  93.0   \n",
-      "..                        ...             ...                   ...   \n",
-      "907 2024-07-02 18:00:00+00:00       19.069500                  51.0   \n",
-      "908 2024-07-02 19:00:00+00:00       18.069500                  56.0   \n",
-      "909 2024-07-02 20:00:00+00:00       16.869501                  63.0   \n",
-      "910 2024-07-02 21:00:00+00:00       15.769500                  69.0   \n",
-      "911 2024-07-02 22:00:00+00:00       14.969500                  73.0   \n",
-      "\n",
-      "     dew_point_2m  apparent_temperature  precipitation  wind_speed_10m  \n",
-      "0       13.509601             16.902561            0.0        5.623380  \n",
-      "1       14.131086             16.396255            0.0        3.758510  \n",
-      "2       14.323655             15.524284            0.0        4.735060  \n",
-      "3       13.306198             14.558578            0.0        4.072935  \n",
-      "4       12.583660             14.175747            0.0        2.276840  \n",
-      "..            ...                   ...            ...             ...  \n",
-      "907      8.697532             17.274546            0.0        9.957108  \n",
-      "908      9.156044             16.675785            0.0        8.049845  \n",
-      "909      9.781803             15.876669            0.0        6.489992  \n",
-      "910     10.094409             15.069830            0.0        5.091168  \n",
-      "911     10.169727             14.320055            0.0        4.896529  \n",
-      "\n",
-      "[912 rows x 7 columns]\n"
+      "Coordinates 54.68000030517578°N 13.439998626708984°E\n",
+      "Elevation 40.0 m asl\n",
+      "Timezone b'Europe/Berlin' b'CEST'\n",
+      "Timezone difference to GMT+0 120.0 m\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>temperature_2m</th>\n",
+       "      <th>relative_humidity_2m</th>\n",
+       "      <th>dew_point_2m</th>\n",
+       "      <th>apparent_temperature</th>\n",
+       "      <th>precipitation</th>\n",
+       "      <th>cloud_cover</th>\n",
+       "      <th>wind_speed_10m</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-05-25 22:00:00+00:00</td>\n",
+       "      <td>13.490000</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>12.215392</td>\n",
+       "      <td>12.185705</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>13.684735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-05-25 23:00:00+00:00</td>\n",
+       "      <td>13.290000</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>12.017374</td>\n",
+       "      <td>12.424212</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>10.239453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-05-26 00:00:00+00:00</td>\n",
+       "      <td>13.440000</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>12.165888</td>\n",
+       "      <td>12.467648</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>11.298495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-05-26 01:00:00+00:00</td>\n",
+       "      <td>13.240000</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>11.967870</td>\n",
+       "      <td>12.106417</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>11.966953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-05-26 02:00:00+00:00</td>\n",
+       "      <td>12.889999</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>12.267310</td>\n",
+       "      <td>12.187695</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>9.673221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>2024-07-02 17:00:00+00:00</td>\n",
+       "      <td>18.389999</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>10.734322</td>\n",
+       "      <td>17.515385</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>7.568566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>2024-07-02 18:00:00+00:00</td>\n",
+       "      <td>18.090000</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>10.936496</td>\n",
+       "      <td>17.525196</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>5.860375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
+       "      <td>2024-07-02 19:00:00+00:00</td>\n",
+       "      <td>17.440001</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>11.692225</td>\n",
+       "      <td>17.187851</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>5.315336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>910</th>\n",
+       "      <td>2024-07-02 20:00:00+00:00</td>\n",
+       "      <td>16.539999</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>12.689614</td>\n",
+       "      <td>16.532207</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>5.860375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>911</th>\n",
+       "      <td>2024-07-02 21:00:00+00:00</td>\n",
+       "      <td>15.840000</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>13.140593</td>\n",
+       "      <td>15.804136</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>7.100310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>912 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         date  temperature_2m  relative_humidity_2m   \n",
+       "0   2024-05-25 22:00:00+00:00       13.490000                  92.0  \\\n",
+       "1   2024-05-25 23:00:00+00:00       13.290000                  92.0   \n",
+       "2   2024-05-26 00:00:00+00:00       13.440000                  92.0   \n",
+       "3   2024-05-26 01:00:00+00:00       13.240000                  92.0   \n",
+       "4   2024-05-26 02:00:00+00:00       12.889999                  96.0   \n",
+       "..                        ...             ...                   ...   \n",
+       "907 2024-07-02 17:00:00+00:00       18.389999                  61.0   \n",
+       "908 2024-07-02 18:00:00+00:00       18.090000                  63.0   \n",
+       "909 2024-07-02 19:00:00+00:00       17.440001                  69.0   \n",
+       "910 2024-07-02 20:00:00+00:00       16.539999                  78.0   \n",
+       "911 2024-07-02 21:00:00+00:00       15.840000                  84.0   \n",
+       "\n",
+       "     dew_point_2m  apparent_temperature  precipitation  cloud_cover   \n",
+       "0       12.215392             12.185705            0.0        100.0  \\\n",
+       "1       12.017374             12.424212            0.0         81.0   \n",
+       "2       12.165888             12.467648            0.0         97.0   \n",
+       "3       11.967870             12.106417            0.0         80.0   \n",
+       "4       12.267310             12.187695            0.0         95.0   \n",
+       "..            ...                   ...            ...          ...   \n",
+       "907     10.734322             17.515385            0.0         27.0   \n",
+       "908     10.936496             17.525196            0.0         40.0   \n",
+       "909     11.692225             17.187851            0.0         31.0   \n",
+       "910     12.689614             16.532207            0.0         21.0   \n",
+       "911     13.140593             15.804136            0.0         12.0   \n",
+       "\n",
+       "     wind_speed_10m  \n",
+       "0         13.684735  \n",
+       "1         10.239453  \n",
+       "2         11.298495  \n",
+       "3         11.966953  \n",
+       "4          9.673221  \n",
+       "..              ...  \n",
+       "907        7.568566  \n",
+       "908        5.860375  \n",
+       "909        5.315336  \n",
+       "910        5.860375  \n",
+       "911        7.100310  \n",
+       "\n",
+       "[912 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#pip install openmeteo-requests\n",
-    "#!pip install requests-cache retry-requests numpy pandas\n",
-    "\n",
     "import openmeteo_requests\n",
+    "\n",
     "import requests_cache\n",
     "import pandas as pd\n",
     "from retry_requests import retry\n",
@@ -61,10 +237,10 @@
     "# The order of variables in hourly or daily is important to assign them correctly below\n",
     "url = \"https://api.open-meteo.com/v1/dwd-icon\"\n",
     "params = {\n",
-    "\t\"latitude\": 52.52,\n",
-    "\t\"longitude\": 13.41,\n",
-    "\t\"hourly\": [\"temperature_2m\", \"relative_humidity_2m\", \"dew_point_2m\", \"apparent_temperature\", \"precipitation\", \"wind_speed_10m\"],\n",
-    "\t\"timezone\": \"Europe/London\",\n",
+    "\t\"latitude\": [54.6791, 52.2915, 53.0451, 50.7913, 51.1278, 50.4283, 51.162, 53.633, 47.801, 47.6952, 52.209, 53.7123, 49.503, 52.381, 54.1803, 49.2128, 54.3279, 54.528, 48.8281, 49.7479, 48.4024, 49.7704, 47.421, 48.5451],\n",
+    "\t\"longitude\": [13.4344, 10.4464, 8.7981, 12.872, 13.7543, 12.9536, 14.951, 9.988, 11.011, 9.1307, 14.118, 7.1519, 11.0549, 13.062, 12.0808, 7.1077, 8.6031, 9.549, 9.2, 6.6583, 11.6946, 9.9576, 10.9848, 13.3532],\n",
+    "\t\"hourly\": [\"temperature_2m\", \"relative_humidity_2m\", \"dew_point_2m\", \"apparent_temperature\", \"precipitation\", \"cloud_cover\", \"wind_speed_10m\"],\n",
+    "\t\"timezone\": [\"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\"],\n",
     "\t\"past_days\": 31\n",
     "}\n",
     "responses = openmeteo.weather_api(url, params=params)\n",
@@ -74,7 +250,7 @@
     "print(f\"Coordinates {response.Latitude()}°N {response.Longitude()}°E\")\n",
     "print(f\"Elevation {response.Elevation()} m asl\")\n",
     "print(f\"Timezone {response.Timezone()} {response.TimezoneAbbreviation()}\")\n",
-    "print(f\"Timezone difference to GMT+0 {response.UtcOffsetSeconds()} s\")\n",
+    "print(f\"Timezone difference to GMT+0 {response.UtcOffsetSeconds()/60} m\")\n",
     "\n",
     "# Process hourly data. The order of variables needs to be the same as requested.\n",
     "hourly = response.Hourly()\n",
@@ -83,7 +259,8 @@
     "hourly_dew_point_2m = hourly.Variables(2).ValuesAsNumpy()\n",
     "hourly_apparent_temperature = hourly.Variables(3).ValuesAsNumpy()\n",
     "hourly_precipitation = hourly.Variables(4).ValuesAsNumpy()\n",
-    "hourly_wind_speed_10m = hourly.Variables(5).ValuesAsNumpy()\n",
+    "hourly_cloud_cover = hourly.Variables(5).ValuesAsNumpy()\n",
+    "hourly_wind_speed_10m = hourly.Variables(6).ValuesAsNumpy()\n",
     "\n",
     "hourly_data = {\"date\": pd.date_range(\n",
     "\tstart = pd.to_datetime(hourly.Time(), unit = \"s\", utc = True),\n",
@@ -96,9 +273,11 @@
     "hourly_data[\"dew_point_2m\"] = hourly_dew_point_2m\n",
     "hourly_data[\"apparent_temperature\"] = hourly_apparent_temperature\n",
     "hourly_data[\"precipitation\"] = hourly_precipitation\n",
+    "hourly_data[\"cloud_cover\"] = hourly_cloud_cover\n",
     "hourly_data[\"wind_speed_10m\"] = hourly_wind_speed_10m\n",
     "\n",
-    "hourly_dataframe = pd.DataFrame(data = hourly_data)"
+    "hourly_dataframe = pd.DataFrame(data = hourly_data)\n",
+    "hourly_dataframe"
    ]
   },
   {
